tool/src/c/snapshots/diplomat_tool__c__types__tests__empty_result_types@MyStruct_type.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyStruct_type_H
#define MyStruct_type_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#include "diplomat_result_void_uint8_t.h"
#include "diplomat_result_void_void.h"
#include "diplomat_result_uint8_t_void.h"
#ifdef __cplusplus
namespace capi {
#endif // __cplusplus

typedef struct MyStruct {
    diplomat_result_void_uint8_t a;
    diplomat_result_void_void b;
    diplomat_result_uint8_t_void c;
} MyStruct;
#ifdef __cplusplus
} // namespace capi
#endif // __cplusplus
#endif // MyStruct_type_H

