tool/src/c/snapshots/diplomat_tool__c__types__tests__empty_result_types@diplomat_result_void_void.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()
---
#ifndef diplomat_result_void_void_H
#define diplomat_result_void_void_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
namespace capi {
extern "C" {
#endif
typedef struct diplomat_result_void_void {
    bool is_ok;
} diplomat_result_void_void;
#ifdef __cplusplus
} // extern "C"
} // namespace capi
#endif
#endif

