tool/src/c/snapshots/diplomat_tool__c__types__tests__empty_result_types@result_uint8_t_void.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()

---
#ifndef result_uint8_t_void_H
#define result_uint8_t_void_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
extern "C" {
#endif
typedef struct ffi_result_uint8_t_void {
    union {
        uint8_t ok;
    };
    bool is_ok;
} ffi_result_uint8_t_void;
#ifdef __cplusplus
}
#endif
#endif

