tool/src/c/snapshots/diplomat_tool__c__types__tests__pointer_types@MyOpaqueStruct.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyOpaqueStruct_H
#define MyOpaqueStruct_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
namespace capi {
#endif

typedef struct MyOpaqueStruct MyOpaqueStruct;
#ifdef __cplusplus
} // namespace capi
#endif
#ifdef __cplusplus
namespace capi {
extern "C" {
#endif

void MyOpaqueStruct_destroy(MyOpaqueStruct* self);

#ifdef __cplusplus
} // extern "C"
} // namespace capi
#endif
#endif

