tool/src/c/snapshots/diplomat_tool__c__types__tests__pointer_types@MyOpaqueStruct_type.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyOpaqueStruct_type_H
#define MyOpaqueStruct_type_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
namespace capi {
#endif // __cplusplus

typedef struct MyOpaqueStruct MyOpaqueStruct;
#ifdef __cplusplus
} // namespace capi
#endif // __cplusplus
#endif // MyOpaqueStruct_type_H

