tool/src/c/snapshots/diplomat_tool__c__types__tests__pointer_types@MyStruct.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyStruct_H
#define MyStruct_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"
#include "MyStruct_type.h"
typedef struct MyOpaqueStruct MyOpaqueStruct;
#include "MyOpaqueStruct_type.h"
#ifdef __cplusplus
namespace capi {
extern "C" {
#endif

MyStruct MyStruct_new(const MyOpaqueStruct* foo, MyOpaqueStruct* bar);
void MyStruct_destroy(MyStruct* self);

#ifdef __cplusplus
} // extern "C"
} // namespace capi
#endif // __cplusplus
#endif // MyStruct_H

